samples/_failures_safe/1761264377_a015ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2363cad3.c: In function ‘main’:
./samples/SAFE/__tmp_2363cad3.c:161:12: error: missing terminating " character
  161 |     printf("Transpose of matrix B
      |            ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_2363cad3.c:161:5: error: expected expression at end of input
  161 |     printf("Transpose of matrix B
      |     ^~~~~~
./samples/SAFE/__tmp_2363cad3.c:161:5: error: expected declaration or statement at end of input
